Go Login Works !!!
Also modified the entire directory for the second homework
