# fantastic-coffee-decaffeinated-master/service/api/do-login.go
@@ -1,38 +1,0 @@
-package api
-
-import (
-	"encoding/json"
-	"net/http"
-
-	"git.sapienzaapps.it/fantasticcoffee/fantastic-coffee-decaffeinated/service/api/reqcontext"
-	"github.com/julienschmidt/httprouter"
-)
-
-func (rt *_router) doLogin(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
-	// Read the username from the request body.
-	var username string
-	err := json.NewDecoder(r.Body).Decode(&username)
-	if err != nil {
-		// The body was not a parseable JSON, reject it
-		w.WriteHeader(http.StatusBadRequest)
-		return
-	} else if len(username) < 3 || len(username) > 16 {
-		// Here we validated the username
-		w.WriteHeader(http.StatusBadRequest)
-		return
-	}
-
-	// Login the user in the DB.
-	id, err := rt.db.LoginUser(username)
-	if err != nil {
-		// In this case, we have an error on our side. Log the error (so we can be notified) and send a 500 to the user
-		// Note: we are using the "logger" inside the "ctx" (context) because the scope of this issue is the request.
-		ctx.Logger.WithError(err).Error("Can't login the user")
-		w.WriteHeader(http.StatusInternalServerError)
-		return
-	}
-
-	// Send the output to the user.
-	w.Header().Set("Content-Type", "application/json")
-	_ = json.NewEncoder(w).Encode(id)
-}
