# fantastic-coffee-decaffeinated-master/service/api/struct.go
@@ -1,18 +1,0 @@
-package api
-
-type Photo struct {
-	photoID   uint64
-	profileId uint64
-	image     []string
-	time      string
-	likes     []uint64
-}
-
-type User struct {
-	ID        uint64
-	username  string
-	follows   []uint64
-	followers []uint64
-	banned    []uint64
-	photos    []Photo
-}
